--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Model Mapper: http://modelmapper.org/ -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
